# jox-algorithm

./: Dockerfile.javascript  ERRORS.md  README.md
.github/workflows/: cpp.yml  golang.yml  javascript.yml  python.yml  scheme.yml
cpp/: README.md  configure.ac
cpp/src/: Makefile.am  algorithm.cpp  algorithm.h  exception.cpp  exception.h  job.cpp  job.h  test_algorithm.cpp  warning.cpp  warning.h
golang/: algorithm.go  algorithm_test.go  go.mod
javascript/: README.md  algorithm.js  algorithm.test.js  package-lock.json  package.json
python/: README.md  algorithm.py  job.py  test.py
scheme/: algorithm.scm  algorithm_test.scm  run_tests.sh
tests/: 01-b-after-a.json  02-a-before-b.json  03-b-is-target-a-is-not-required.json  04-a-and-b-cyclic-dependency.json  05-three-jobs-cyclic-dependency.json  06-a-after-itself.json  07-a-before-itself.json  08-no-targets.json  09-two-jobs-after-a.json  10-a-before-two-jobs.json  11-c-after-two-jobs.json  12-two-jobs-before-c.json  13-job-does-not-exist.json  14-target-does-not-exist.json
